--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
                         <p>⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀</p>
                     </div>
                 </div>
-                <!-- <figure class="pic-3">
-                    <p><img class="img"src="100.0.png" width="800"></p>
+                <figure class="pic-3">
+                    <p><img class="img"src="картинки/150.0.png" width="800"></p>
                     <figcaption class="pic-signature-3"> Личная работа автора сайта (рисунок) посвященный спутнику Сатурна Пандоре.<br>ВНИМАЕНИЕ! На работе не соблюдены масштабы и расположения небесных тел.</figcaption>
-                </figure> -->
+                </figure>
             </div>
         </div>
     </main>
